@@ -24,6 +24,8 @@
 
 	<H3 _HD_OMIT_TOC>Bug Fixes</H3>
 
+	<LI>Fixed a table column sizing bug.
+
 	<LI>HTMLDOC didn't read back the HTTP response properly in
 	all situations.
 
